<resources>
    <string name="app_name">IMABA Jogja</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="empty_desk">Maaf, Tidak dapat menemukan data :(</string>
    <string name="empty">❌ Kosong</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="logo">logo</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Daftar</string>
    <string name="masuk_dengan">atau masuk dengan</string>
    <string name="btnGoogle">google login</string>
    <string name="welcome_title">Selamat Datang di IMABA Jogja</string>
    <string name="welcome_desc">Silahkan login atau daftar untuk melanjutkan</string>
    <string name="home">Home</string>
    <string name="member">Anggota</string>
    <string name="study">Studi</string>
    <string name="profile">Profil</string>
    <string name="search_hint">Cari Anggota</string>
    <string name="title_member">👥 Daftar Anggota</string>
    <string name="name_example">Spongebob Squarepants</string>
    <string name="email_example">email@example.com</string>
    <string name="number_example">+62 812-3456-7890</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="biodata">Biodata</string>
    <string name="place_date">Tempat, Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="religion">Agama</string>
    <string name="nisn">NISN</string>
    <string name="birth_place_date">Tempat, Tanggal lahir</string>
    <string name="birth_place">Tempat Lahir</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="kontak_dan_alamat">Kontak dan Alamat</string>
    <string name="phone_number">Nomor Hp</string>
    <string name="province">Provinsi</string>
    <string name="regency">Kabupaten</string>
    <string name="district">Kecamatan</string>
    <string name="full_address">Alamat Lengkap</string>
    <string name="postal_code">Kode Pos</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="scholl_origin">Asal Sekolah</string>
    <string name="graduation_year">Tahun Lulus</string>
    <string name="save">Simpan</string>
    <string name="no_anggota">Nomor Anggota</string>
    <string name="angkatan">Angkatan</string>
    <string name="jenis_anggota">Jenis Anggota</string>
    <string name="rencana_perguruan_tinggi">Rencana Perguruan tinggi</string>
    <string name="nama_perguruan_tinggi">Nama Perguruan Tinggi</string>
    <string name="program_studi">Program Studi</string>
    <string name="program_studi_2">Program Studi 2</string>
    <string name="jenjang">Jenjang: </string>
    <string name="status">Status</string>
    <string name="lengkapi_persyaratan_dokumen">Lengkapi Persyaratan Dokumen</string>
    <string name="fakultas">Fakultas</string>
    <string name="delete">Hapus</string>
    <string name="home_photo">Foto Rumah</string>
    <string name="btn_home_photo">Tambah Foto Rumah</string>
    <string name="edit">Edit</string>
    <string name="kosongkan_pendidikan_saat_ini">Kosongkan Pendidikan Saat Ini</string>
    <string name="title_ganti_password">Ganti Password</string>
    <string name="filter">Filter</string>
    <string name="title_placeholder">Masukkan Title</string>
    <string name="description_placeholder">Masukkan Deskripsi Organisasi</string>
    <string name="email_placeholder">Masukkan Email Organisasi</string>
    <string name="vision_placeholder">Masukkan Visi</string>
    <string name="mission_placeholder">Masukkan Misi</string>
    <string name="phone_placeholder">Nomor Hp Organisasi</string>
    <string name="address_placeholder">Masukkan Alamat</string>
    <string name="loading">loading...</string>
    <string name="cancel">Batal</string>
    <string name="lengkap">Lengkap</string>
    <string name="tidak_lengkap">Tidak lengkap</string>
    <string name="title_rencana_studi">Rencana Studi</string>
    <string name="add">Tambah</string>
    <string name="progress">Progress: </string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="location_placeholder">alamat</string>
    <string name="log_out">Keluar</string>
    <string name="change_password">Ganti Password</string>
    <string name="about">About</string>
    <string name="setting">Pengaturan</string>
    <string name="dokumen_pendukung">Dokumen Pendukung</string>
    <string name="icon_document">icon document</string>
    <string name="delete_document">delete document</string>
    <string name="detail_studi">Detail Studi</string>
    <string name="perguruan_tinggi">Perguruan Tinggi</string>
    <string name="import_perguruan_tinggi">Import Perguruan Tinggi</string>
    <string name="template">Template</string>
    <string name="desk_perguruan_tinggi">Menampilkan semua perguruan tinggi beserta program studi se Yogyakarta</string>
    <string name="title_program_studi">Program Studi</string>
    <string name="desc_dokument_organisasi">Semua dokumen penting organisasi ada di sini. Silakan cek ya!</string>
    <string name="welcome">👋 Selamat datang di Imaba Jogja!</string>
    <string name="desk_welcome">Hai! Siap kelola rencana studimu dan tetap terhubung dengan organisasi? Semuanya ada di sini!</string>
    <string name="desk_welcome_admin">Dashboard ini bantu kamu kelola anggota, dokumen, dan program studi dengan lebih mudah.</string>
    <string name="desk_member">ILihat siapa aja anggota Imaba Jogja yang terdaftar. Kamu bisa kenalan, cari teman satu kampus, atau cek data anggota lainnya di sini!</string>
    <string name="desc_plan">Kelola rencana studimu di sini! Kamu bisa menambahkan maksimal 2 kampus dan maksimal 2 program studi untuk setiap kampus.</string>
    <string name="foto_rumah">Foto Rumah</string>
    <string name="desc_dock">Upload dokumen persyaratan pendaftaran kampus kamu di sini. Pastikan file yang dikirim sesuai dengan ketentuan</string>
    <string name="desc_home_photo">Unggah foto beberapa bagian rumah kamu untuk keperluan verifikasi. Pastikan foto jelas dan tidak blur, ya!</string>
    <string name="studi_saat_ini">Studi saat ini</string>
    <string name="persyartan">Persyartan</string>
    <string name="progres_dock">24/24</string>
    <string name="tambah_anggota">Tambah Anggota</string>
    <string name="export_anggota">Export Anggota</string>
    <string name="replace_photo">replace photo</string>
    <string name="data_admin">Data Admin</string>
    <string name="akun">Akun</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="no_hp">No. Hp</string>
    <string name="desk_program_study">Menampilkan semua perguruan tinggi beserta program studi se Yogyakarta</string>
    <string name="nomor_hp_2">No. HP 2</string>
    <string name="email_atau_username">Email atau username</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun_daftar">Belum punya akun ? daftar</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk melanjutkan</string>
    <string name="tipe_anggota">Tipe Anggota</string>
    <string name="detail_anggota">Detail Anggota</string>
    <string name="copyright">Copyright © 2025 IMABA Jogja - All rights reserved</string>
    <string name="app_version">version: %1$s</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_forgot_password">Lupa Password?</string>
</resources>