<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.profile.AdmProfileFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressIndicator" >

    <TextView
        android:id="@+id/tvTitle"
        style="@style/textHeaderM_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:clickable="true"
        android:src="@drawable/ic_about"
        android:contentDescription="@string/about"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="45dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:contentDescription="@string/profile"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btnReplacePhoto"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_camera_plus2"
        android:contentDescription="@string/replace_photo"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tvName"
        style="@style/textBodyL_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name_example"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_example"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_example"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/tvEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvFullAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollableContent"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDesk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:elevation="4dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/textBodyL_bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/data_admin" />

                        <TextView
                            android:id="@+id/btnSave"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:focusable="true"
                            android:clickable="true"
                            android:padding="4dp"
                            android:text="@string/save"
                            android:textColor="@color/blue_link"
                            android:textSize="14sp"
                            android:visibility="gone"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/btnEdit"
                            style="@style/textBodyL_bold"
                            android:background="?attr/selectableItemBackground"
                            android:focusable="true"
                            android:clickable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/edit"
                            android:textSize="14sp"
                            android:visibility="visible"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:visibility="gone"
                        android:text="@string/akun"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilUsername"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginBottom="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsername"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmail"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginBottom="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/biodata"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilFullName"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFullname"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fullname"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPhoneNumber"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPhoneNumber"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/no_hp"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilProvince"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        app:endIconMode="dropdown_menu">

                        <AutoCompleteTextView
                            android:id="@+id/etProvince"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/province"
                            android:inputType="none"
                            android:padding="16dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCity"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        app:endIconMode="dropdown_menu">

                        <AutoCompleteTextView
                            android:id="@+id/etCity"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/regency"
                            android:inputType="text"
                            android:padding="16dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilDistrict"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:endIconMode="dropdown_menu">

                        <AutoCompleteTextView
                            android:id="@+id/etDistrict"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/district"
                            android:inputType="text"
                            android:maxLines="2"
                            android:padding="16dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilAddress"
                        style="@style/til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAddress"
                            style="@style/edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_address"
                            android:minLines="3"
                            android:gravity="top"
                            android:scrollbars="vertical"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:textAllCaps="false"
                android:id="@+id/btnChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_ganti_password"/>

            <Button
                android:textAllCaps="false"
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/log_out"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
